--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,12 @@
     -moz-osx-font-smoothing: grayscale;
 }
 body {
-    background-color: #435165;
+    background-color: #045972;
+    /* background-color:rgba(12, 158, 56, 0.589); */
+    /* background-image: linear-gradient(45deg, #dcc161 0,
+    #d0c562 5.56%, #c3c865 11.11%, #b5cc6a 16.67%, #a7cf71 22.22%, #98d27a 27.78%,
+    #88d484 33.33%, #77d68f 38.89%, #64d89a 44.44%, #4ed9a7 50%, #30dab4 55.56%, #00dbc1 61.11%, #00dbcf 66.67%, #00dbdc 72.22%, #00dae8 77.78%, #00d9f4 83.33%, #00d8ff 88.89%, #00d6ff 94.44%, #00d4ff 100%);
+     */
     margin: 0;
 }
 .login, .register {
@@ -37,36 +42,36 @@ body {
     color: #9da3ac;
 }
 .login .links a.active, .register .links a.active {
-    border-bottom: 3px solid #3274d6;
-    color: #3274d6;
+    border-bottom: 3px solid #1C94B8;
+    color: #1C94B8;
 }
 .login form, .register form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 50px;
 }
 .login form label, .register form label {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50px;
-    height: 50px;
-    background-color: #3274d6;
+    width: 60px;
+    height: 60px;
+    background-color: #1AAEDA;
     color: #ffffff;
 }
 .login form input[type="password"], .login form input[type="text"], .login form input[type="email"], .register form input[type="password"], .register form input[type="text"], .register form input[type="email"] {
     width: 310px;
-    height: 50px;
+    height: 60px;
     border: 1px solid #dee0e4;
-    margin-bottom: 20px;
+    margin-bottom: 35px;
     padding: 0 15px;
 }
 .login form input[type="submit"], .register form input[type="submit"] {
     width: 100%;
     padding: 15px;
     margin-top: 20px;
-    background-color: #3274d6;
+    background-color: #1AAEDA;
     border: 0;
     cursor: pointer;
     font-weight: bold;
@@ -74,11 +79,11 @@ body {
     transition: background-color 0.2s;
 }
 .login form input[type="submit"]:hover, .register form input[type="submit"]:hover {
-    background-color: #2868c7;
+    background-color: #1C94B8;
     transition: background-color 0.2s;
 }
 .navtop {
-    background-color: #2f3947;
+    background-color: #045972;
     height: 60px;
     width: 100%;
     border: 0;
