--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,35 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Login</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-	</head>
-	<body>
-		<div class="login">
-			<h1>Login</h1>
-			<div class="links">
-				<a href="{{ url_for('login') }}" class="active">Login</a>
-				<a href="{{ url_for('register') }}">Register</a>
-			</div>
-			<form action="{{ url_for('login') }}" method="post">
-				<label for="username">
-					<i class="fas fa-user"></i>
-				</label>
-				<input type="text" name="username" placeholder="Username" id="username" required>
-				<label for="password">
-					<i class="fas fa-lock"></i>
-				</label>
-				<input type="password" name="password" placeholder="Password" id="password" required>
-				<div class="msg">{{ msg }}</div>
-				<input type="submit" value="Login">
-			</form>
-		</div>
-	</body>
-</html>
+
+<!--Como se puede ver con la plantilla de inicio de sesión, creamos el formulario junto con los campos de
+ entrada: username y password. El método del formulario está configurado para POST, lo que determina el
+ tipo de solicitud que queremos enviar a nuestro servidor. Usaremos una solicitud POST para enviar los datos del formulario. -->
+ <!DOCTYPE html>
+ <html>
+	 <head>
+		 <meta charset="utf-8">
+		 <title>Login</title>
+		 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+		 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+
+		</head>
+	 <body>
+		 <div class="login">
+			 <h1>Login</h1>
+			 <div class="links">
+				 <a href="{{ url_for('login') }}" class="active">Login</a>
+				 <a href="{{ url_for('register') }}">Register</a>
+			 </div>
+			 <form action="{{ url_for('login') }}" method="post">
+				 <label for="username">
+					 <i class="fas fa-user"></i>
+				 </label>
+				 <input type="text" name="username" placeholder="Username" id="username" required>
+				 <label for="password">
+					 <i class="fas fa-lock"></i>
+				 </label>
+				 <input type="password" name="password" placeholder="Password" id="password" required>
+				 <div class="msg">{{ msg }}</div>
+				 <input type="submit" value="Login">
+			 </form>
+		 </div>
+	 </body>
+ </html>
